correctio  on some mistakes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="closeBtn">
                 <box-icon name='x-circle'></box-icon>
             </div>
-            <h4 class="title">Show notifications for</h4>
+            <h4 class="title">Show notifications</h4>
 
             <div class="notification-link">
                 <box-icon type='solid' name='bell'></box-icon>
